# CS454_DeepParameter

./: CMakeLists.txt  DeepParameterTuning.java  DeepParameterTuning_100ind_100gen.java  DeepParameterTuning_100ind_100gen_systematic.java  DeepParameterTuning_100ind_10gen_sytematic.java  README.md  classify_images.cpp  corner_detect.cpp  find_match.cpp  fitness_function.bsh  get_95_confidence_upper.R  load.bsh  load_and_evaluation.bsh  load_and_evaluation_test_set.bsh  new_fitness_function.bsh  randompolygon.py  remove_sensative.bsh  run_sensativity_filteration.bsh  run_sensativity_filteration_output.csv  setup.bsh  setup_dataset.bsh  testset_evaluation_script.bsh
100ind_100gen_run_evolutionary/: pareto_optimal_test_set.csv  pareto_optimal_training_set.csv  test_pareto.csv  test_set_original.csv  training_pareto.csv  training_set_original.csv
100ind_100gen_run_systematic/: pareto_optimal_test_set.csv  pareto_optimal_training_set.csv  test_pareto.csv  training_pareto.csv
100ind_10gen_run/: pareto_optimal.csv  pareto_optimal_test_set.csv  test_set_original.csv
100ind_10gen_run_evolutionary/: no_mod_100_run_training_set.csv  pareto_optimal_test_set.csv  pareto_optimal_training_set.csv  test_pareto.csv  training_pareto.csv
100ind_10gen_run_systematic/: no_mod_100_run_training_set.csv  pareto_optimal_test_set.csv  pareto_optimal_training_set.csv  test_pareto.csv  training_pareto.csv  training_set_origina.csv  training_set_original.csv
modifiable_files/: cascadedetect.cpp  cascadedetect.hpp  cascadedetect_exposed.cpp  cascadedetect_exposed.hpp  color.cpp  corner.cpp  (+7 more)
(+21 files in other folders)
