cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project( corner_detect )
project( find_match )
find_package( OpenCV REQUIRED )
find_package(Boost COMPONENTS system filesystem REQUIRED)
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

add_executable( corner_detect corner_detect.cpp)
target_link_libraries( corner_detect ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( corner_detect ${Boost_LIBRARIES} )
set(CMAKE_BUILD_TYPE Debug)

add_executable( find_match find_match.cpp)
set(CMAKE_BUILD_TYPE Debug)